--- a/Transpose_CSV.ipynb
+++ b/Transpose_CSV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Transpose CSV.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXl33yZWvjJwBZ7igiXdL7",
+      "authorship_tag": "ABX9TyOvFxDgkk+LEz+zTBInsONW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "df1.to_csv('FileName.csv')\r\n",
         "\r\n",
         "#Exporting the CSV to Google Drive\r\n",
-        "!cp new_feb_10.csv \"drive/My Drive/(Put any directory name if needed)\""
+        "!cp FileName.csv \"drive/My Drive/(Put any directory name if needed)\""
       ],
       "execution_count": null,
       "outputs": []
